Bug 1834316 - Don't mask Arabic comma/semicolon/question-mark from the font's cmap when 'arab' script support is absent, because they may be used with other scripts such as N'Ko. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D178693